--- a/Präsentation/slides.tex
+++ b/Präsentation/slides.tex
@@ -43,15 +43,15 @@
 \end{frame}
 
 \begin{frame}
-\centerline{\includegraphics[width=6cm]{pics/ros5.png}}
+\centerline{\includegraphics[width=9cm]{pics/ros5.png}}
 \end{frame}
 
 \begin{frame}
-\centerline{\includegraphics[width=6cm]{pics/slam.png}}
+\centerline{\includegraphics[width=9cm]{pics/slam.png}}
 \end{frame}
 
 \begin{frame}
-\centerline{\includegraphics[width=6cm]{pics/jaco_arm.jpg}}
+\centerline{\includegraphics[width=9cm]{pics/jaco_arm.jpg}}
 \end{frame}
 
 \begin{frame}
@@ -64,7 +64,7 @@
 \end{frame}
 
 \begin{frame}
-\centerline{\includegraphics[width=12cm]{pics/ros_equation.png}}
+\centerline{\includegraphics[width=13cm]{pics/ros_equation.png}}
 \end{frame}
 
 \begin{frame}
@@ -81,6 +81,23 @@
 
 \begin{frame}
 \centerline{\includegraphics[width=6cm]{pics/groovy.jpg}}
+\end{frame}
+
+\begin{frame}
+\centerline{\includegraphics[width=6cm]{pics/groovy.jpg}}
+\centerline{\includegraphics[width=6cm]{pics/frage.png}}
+\end{frame}
+
+
+\begin{frame}
+\centerline{\includegraphics[width=2cm]{pics/groovy.jpg}}
+\centerline{\includegraphics[width=3.5cm]{pics/frage.png}}
+\end{frame}
+
+\begin{frame}
+\centerline{\includegraphics[width=4cm]{pics/goku.jpg}}
+\vspace{2cm}
+\centerline{{\bf \Huge FRAGEN?}}
 \end{frame}
 
 \end{document}
