--- a/Präsentation/slides.tex
+++ b/Präsentation/slides.tex
@@ -3,43 +3,36 @@
  \usepackage[german]{babel}
  \usepackage[utf8]{inputenc}
  \usepackage{graphicx}
-\usetheme{Boadilla}
+\usetheme{Antibes}
 
 \setbeamercovered{transparent}
 \beamertemplatenavigationsymbolsempty
 \setbeamertemplate{footline}[frame number]
 
-\title[Rapi]{Raspberry Pi ROS}
-\author[D. Herdt, A. Causevic]{Dennis Herdt, Almin Causevic}
-\institute[I_HS Wgt-Rav]{Informatik HS Weingarten-Ravensburg}
+\title[Raspberry Pi ROS]{Raspberry Pi ROS}
+\author{Dennis Herdt, Almin Causevic}
+\institute[I_HS Wgt-Rav]{Angewandte Informatik HS Weingarten-Ravensburg}
 \date{\today}
 %\logo{\pgfimage[width=2cm,height=2cm]{hulogo}}
 %\titlegraphic{\includegraphics[width=2cm,height=2cm]{hulogo}}
 \subject{Raspberry Pi ROS}
 
 \begin{document}
-
-\begin{frame}[fragile]
-%\begin{figure}[h]
-
-\includegraphics[width=2cm]{pics/hs-logo.jpg}
-%\end{figure}
-
-
-\vspace{1cm}
-
-\begin{center}
-
-{\bf \huge ROS auf dem Raspberry Pi}
-\vspace{2cm}
-
-\today
-
-\end{center}
-\end{frame}
+\frame{\titlepage}
 
 \begin{frame}
 \centerline{\includegraphics[width=8cm]{pics/iki.jpg}}
+\end{frame}
+
+\begin{frame}
+{\bf Ablauf}
+\begin{enumerate}
+\item ROS Projekte
+\item ROS Grundkonzepte
+\item Netzwerkaufbau
+\item Netzwerktest
+\item Anwendung Volksbot
+\end{enumerate}
 \end{frame}
 
 \begin{frame}
@@ -74,24 +67,12 @@
 
 \begin{frame}
 \parbox{5cm}{\includegraphics[width=7cm]{pics/pilogo.png}}
-\huge \hfill 
- $\rightarrow$
+%\huge %\hfill 
 \parbox{5cm}{\includegraphics[width=3cm]{pics/sd.jpg}}
 \end{frame}
 
 \begin{frame}
 \centerline{\includegraphics[width=6cm]{pics/groovy.jpg}}
-\end{frame}
-
-\begin{frame}
-\centerline{\includegraphics[width=6cm]{pics/groovy.jpg}}
-\centerline{\includegraphics[width=6cm]{pics/frage.png}}
-\end{frame}
-
-
-\begin{frame}
-\centerline{\includegraphics[width=2cm]{pics/groovy.jpg}}
-\centerline{\includegraphics[width=3.5cm]{pics/frage.png}}
 \end{frame}
 
 \begin{frame}
