--- a/Präsentation/slides.tex
+++ b/Präsentation/slides.tex
@@ -57,7 +57,9 @@
 \end{frame}
 
 \begin{frame}
-\centerline{\includegraphics[width=13cm]{pics/ros_equation.png}}
+\centerline{\includegraphics[width=4cm]{pics/ros_equation1.png}}
+\centerline{\includegraphics[width=6cm]{pics/ros_equation2.png}}
+\centerline{\includegraphics[width=6cm]{pics/ros_equation3.png}}
 \end{frame}
 
 \begin{frame}
