--- a/Präsentation/slides.tex
+++ b/Präsentation/slides.tex
@@ -8,9 +8,8 @@
 \setbeamercovered{transparent}
 \beamertemplatenavigationsymbolsempty
 \setbeamertemplate{footline}[frame number]
-
 \title[Raspberry Pi ROS]{Raspberry Pi ROS}
-\author{Dennis Herdt, Almin Causevic}
+\author{Denis Herdt, Almin Causevic}
 \institute[I_HS Wgt-Rav]{Angewandte Informatik HS Weingarten-Ravensburg}
 \date{\today}
 %\logo{\pgfimage[width=2cm,height=2cm]{hulogo}}
@@ -21,16 +20,16 @@
 \frame{\titlepage}
 
 \begin{frame}
-\centerline{\includegraphics[width=8cm]{pics/iki.jpg}}
+\centerline{\includegraphics[width=7cm]{pics/iki.jpg}}
 \end{frame}
 
 \begin{frame}
 {\bf Ablauf}
 \begin{enumerate}
-\item ROS Projekte
-\item ROS Grundkonzepte
-\item Netzwerkaufbau
-\item Netzwerktest
+\item Projekte
+\item Grundkonzepte
+\item Installation
+\item Netzwerk
 \item Anwendung Volksbot
 \end{enumerate}
 \end{frame}
@@ -48,6 +47,7 @@
 \end{frame}
 
 \begin{frame}
+Alternativen? \\
 \parbox{5cm}{\includegraphics[width=3cm]{pics/carmen.png}}
 \parbox{5cm}{\includegraphics[width=3cm]{pics/yarp.png}}
 \parbox{5cm}{\includegraphics[width=3cm]{pics/microsoft.jpg}}
@@ -70,11 +70,25 @@
 \begin{frame}
 \parbox{5cm}{\includegraphics[width=7cm]{pics/pilogo.png}}
 %\huge %\hfill 
+$\rightarrow$
 \parbox{5cm}{\includegraphics[width=3cm]{pics/sd.jpg}}
 \end{frame}
 
+
 \begin{frame}
 \centerline{\includegraphics[width=6cm]{pics/groovy.jpg}}
+\end{frame}
+
+\begin{frame}
+{\bf ROS Installation}:
+\begin{enumerate}
+\item Source \\
+$\rightarrow $ lehrreich \\
+$\rightarrow $ zeitaufwendig \\
+\item Binary \\
+$\rightarrow $ triviale Installation \\
+$\rightarrow $ wenige unterstütze packages \\
+\end{enumerate}
 \end{frame}
 
 \begin{frame}
