--- a/Präsentation/slides.tex
+++ b/Präsentation/slides.tex
@@ -20,21 +20,23 @@
 \frame{\titlepage}
 
 \begin{frame}
-\centerline{\includegraphics[width=7cm]{pics/iki.jpg}}
-\end{frame}
-
-\begin{frame}
 {\bf Ablauf}
 \begin{enumerate}
-\item Projekte
-\item Grundkonzepte
-\item Installation
-\item Netzwerk
+\item Motivation
+\item ROS Grundlagen
+\item Implementation Netzwerk
 \item Anwendung Volksbot
+\item Fazit
 \end{enumerate}
 \end{frame}
 
 \begin{frame}
+{\bf Motivation}
+\centerline{\includegraphics[width=7cm]{pics/iki.jpg}}
+\end{frame}
+
+\begin{frame}
+{\bf ROS Grundlagen}
 \centerline{\includegraphics[width=9cm]{pics/ros5.png}}
 \end{frame}
 
@@ -47,7 +49,7 @@
 \end{frame}
 
 \begin{frame}
-Alternativen? \\
+\huge Alternativen? \\
 \parbox{5cm}{\includegraphics[width=3cm]{pics/carmen.png}}
 \parbox{5cm}{\includegraphics[width=3cm]{pics/yarp.png}}
 \parbox{5cm}{\includegraphics[width=3cm]{pics/microsoft.jpg}}
@@ -68,6 +70,7 @@ Alternativen? \\
 
 
 \begin{frame}
+{\bf Implementation Netzwerk}
 \parbox{5cm}{\includegraphics[width=7cm]{pics/pilogo.png}}
 %\huge %\hfill 
 $\rightarrow$
@@ -89,6 +92,11 @@ $\rightarrow $ zeitaufwendig \\
 $\rightarrow $ triviale Installation \\
 $\rightarrow $ wenige unterstütze packages \\
 \end{enumerate}
+\end{frame}
+
+\begin{frame}
+{\bf Fazit}
+\centerline{\includegraphics[width=6cm]{pics/ros.png}}
 \end{frame}
 
 \begin{frame}
