--- a/Präsentation/slides.tex
+++ b/Präsentation/slides.tex
@@ -92,7 +92,8 @@ $\rightarrow$
 \vspace{2cm}
 \centerline{{\bf \Huge FRAGEN?}}
 \end{frame}
-
+\bibliographystyle{plain}
+\bibliography{slides.bib}
 \end{document}
 %groovy http://www.ros.org/news/announcements/
 %sd http://www.gadgetsok.com/free-shipping-sandisk-16gb-sd-card-class-10-30m-$
